# caption-generator

./: LICENSE  README.md  caption_generator.py  main.py  pyproject.toml  setup.cfg
caption_generator/: __init__.py  caption_generator.py
caption_generator/modules/: videoSize.py  writeText.py
modules/: captions.py  writeText.py
