[metadata]
name = caption-generator
version = 0.1.1
author = Ayrik Nabirahni
author_email = ayriknabirahni01@gmail.com
description = A Python tool to automatically generate, and apply captions to videos.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kermitine/caption-generator
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Video
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    moviepy>=2.0.0
    Pillow>=11.3.0
    pysrt>=1.1.2

[options.package_data]
* = *.ttf, *.srt

[options.entry_points]
console_scripts =
    caption-generator = caption_generator.caption_generator:Caption_Generator.add_captions
